--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,10 +38,16 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
 
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
-    implementation ('com.weiwangcn.betterspinner:library-material:1.1.0') {
+    implementation('com.weiwangcn.betterspinner:library-material:1.1.0') {
         exclude group: 'com.android.support', module: 'appcompat-v7'
         exclude group: 'com.nineoldandroids'
     }
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.0'
+
+    implementation 'com.google.zxing:core:3.2.1'
+    implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+    implementation 'com.google.android.gms:play-services-vision:17.0.2'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
