--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="com.example.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -30,6 +31,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".barcode.BarcodeCaptureActivity"
+
+            />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -50,12 +54,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MapActivity"
-            android:windowSoftInputMode="adjustPan|stateHidden"
-            />
-        <activity android:name=".OwnerMapActivity"
-            android:windowSoftInputMode="adjustPan|stateHidden"
-            />
+        <activity
+            android:name=".MapActivity"
+            android:windowSoftInputMode="adjustPan|stateHidden" />
+        <activity
+            android:name=".OwnerMapActivity"
+            android:windowSoftInputMode="adjustPan|stateHidden" />
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -75,7 +79,8 @@
         <activity android:name=".CalibrateActivity" />
         <activity android:name=".AddNewMapActivity" />
         <activity android:name=".MapOwnerActivity" />
-        <activity android:name=".AddMarkerWizardActivity"></activity>
+        <activity android:name=".AddMarkerWizardActivity" />
+        <activity android:name=".ScanPointDetailActivity"></activity>
     </application>
 
 </manifest>
