--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,10 @@ buildscript {
         maven {
             url "https://maven.google.com"
         }
+        maven {
+            url "https://jitpack.io"
+        }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
@@ -25,6 +29,10 @@ allprojects {
         maven {
             url "https://maven.google.com"
         }
+        maven {
+            url "https://jitpack.io"
+        }
+
     }
 }
 
